# NexusLOB

./: .gitignore  CMakeLists.txt  bot_memory.json  check_phase1.py  engine_benchmark.py  fetch_history.py  live_nexus_engine.py  nexus_engine.cp38-win_amd64.pyd  nexus_env.py  nexus_math.cpp  run_live_ai.py  run_live_pipeline.py  test_broker_connection.py  test_env.py  test_eyes.py  test_live_ai.py  trading_bot.py  trading_dashboard.py  train_ai.py  walk_forward_optimizer.py
nexus_india/: bot_memory_india.json  dashboard.py  india_nexus_engine.py
src/: OrderBook.cpp  OrderBook.h  bindings.cpp  main.cpp
